...
        );
      }

      final semester = await Semester.db.insertRow(
        session,
        Semester(
          name: 'Học kỳ 1 năm học 2026–2027',
          academicYear: 2026,
          startDate: DateTime.utc(2026, 9, 1),
          endDate: DateTime.utc(2026, 12, 31, 23, 59, 59),
          status: SemesterStatus.open,
        ),
        transaction: transaction,
...
